--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>HTML Forms</h2>
 
-<form action="https://formsubmit.co/georgelyjo@email.com" method="POST">
+<form action="https://formsubmit.co/georgelyjo@gmail.com" method="POST">
      <input type="text" name="name" required>
      <input type="email" name="email" required>
      <button type="submit">Send</button>
